--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "redux-thunk": "^2.4.1"
   },
   "scripts": {
+    "deploy": "npm run build && npm run build-storybook && npm run build-gh-pages",
+    "build-storybook": "build-storybook -o ./build/storybook",
+    "deploy-storybook": "storybook-to-ghpages",
     "start": "react-app-rewired start",
-    "deploy": "npm run build && npm run build-gh-pages",
     "build": "react-app-rewired build",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
-    "build-gh-pages":"gh-pages -d build" 
+    "build-gh-pages": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -62,6 +63,7 @@
     "@storybook/node-logger": "^6.3.12",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.12",
+    "@storybook/storybook-deployer": "^2.8.11",
     "react-app-rewire-alias": "^1.0.3",
     "react-app-rewired": "^2.1.8"
   }
